--- a/18/AddEditWindow.xaml
+++ b/18/AddEditWindow.xaml
@@ -7,6 +7,11 @@
         mc:Ignorable="d"
         Title="AddEditWindow" Height="450" Width="800">
     <Grid>
-        
+        <StackPanel>
+            <TextBox x:Name="tbId"/>
+            <TextBox x:Name="tbName"/>
+            <DatePicker x:Name="dpDate"/>
+            <Button Content="Добавить" x:Name="btnAdd" Click="btnAdd_Click"/>
+        </StackPanel>
     </Grid>
 </Window>
